# poouli

./: .gitignore  README.md  config.example.yml  pyproject.toml  setup.py
src/poouli/: load_config.py  main.py
